# django-whoop

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish-to-test-pypi.yml  publish.yml
django_whoop/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
django_whoop/management/commands/: sync_whoop.py
django_whoop/migrations/: 0001_initial.py  0002_auto_20210317_1359.py  0003_auto_20210317_1424.py  0004_auto_20210317_1430.py  0005_daily_recovery_sleep_sleepdetail_strain_workout.py  0006_auto_20210318_1359.py  0007_auto_20210318_1400.py  0008_auto_20210318_1416.py  0009_hr.py  0010_journalentry.py
django_whoop/templates/whoop/: base.html  dashboard.html  data_recovery.html  data_sleep.html  data_strain.html  data_workouts.html  login.html  reauth.html  success.html  sync_error.html  sync_success.html
scripts/: bulk_load.py
tests/: settings.py  test_forms.py  test_models.py  test_views.py  urls.py
